--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "nodemon": "^1.19.4",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.2"
   }
 }
