--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "express": "^4.17.1"
   },
   "dependencies": {
-    "body-parser": "^1.8.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "node": "^12.13.1",
-    "nodemon": "^1.19.4",
+    "mongodb": "^3.4.1",
+    "node": "^13.5.0",
+    "nodemon": "^2.0.2",
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "swagger-jsdoc": "^3.5.0",
