--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
   },
   "homepage": "https://github.com/meister-joe/nodejs_restpoc#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "express": "^4.17.1"
+    "browser-sync": "^2.26.7"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongodb": "^3.4.1",
-    "node": "^13.5.0",
+    "mongodb": "^3.5.2",
+    "node": "^13.6.0",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "swagger-jsdoc": "^3.5.0",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.3"
   }
 }
