--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/meister-joe/nodejs_restpoc#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7"
+    "browser-sync": "^2.26.7",
+    "minimist" : "^1.2.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -34,6 +35,7 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "swagger-jsdoc": "^3.5.0",
-    "swagger-ui-express": "^4.1.3"
+    "swagger-ui-express": "^4.1.3",
+    "minimist" : "^1.2.3"
   }
 }
